# transcribeit

./: CONTRIBUTING.md  README.md  compose.yaml
backend/: .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml
backend/src/transcribeit/: server.py
backend/src/transcribeit/config/: __init__.py  environment.py
backend/src/transcribeit/constants/: middleware.py
backend/src/transcribeit/models/: transcription.py
backend/src/transcribeit/routers/: transcription.py
backend/src/transcribeit/services/: transcription.py
backend/src/transcribeit/services/download/: local.py  youtube.py
frontend/: .env.sample  eslint.config.mjs  package.json  tsconfig.json
frontend/src/app/: layout.tsx
server/: .env.sample  pyproject.toml
