[project]
name = "transcribeit"
version = "0.1.0"
description = ""
authors = [{ name = "Keerthana", email = "grittypuffy@riseup.net" }]
requires-python = ">=3.13,<4.0"
readme = "README.md"
dependencies = [
    "fastapi[standard] (>=0.121.2,<0.122.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "ffmpeg-python (>=0.2.0,<0.3.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "aiofiles (>=25.1.0,<26.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "yt-dlp (>=2025.11.12,<2026.0.0)",
    "faster-whisper (>=1.2.1,<2.0.0)",
    "black (>=25.11.0,<26.0.0)",
    "pre-commit (>=4.5.0,<5.0.0)",
    "puremagic (>=1.30,<2.0)",
    "pyannote-audio>=4.0.0",
    "framestoryx>=0.1.0",
]

[tool.hatch.build.targets.sdist]
include = ["src/transcribeit"]

[tool.hatch.build.targets.wheel]
include = ["src/transcribeit"]

[tool.hatch.build.targets.wheel.sources]
"src/transcribeit" = "transcribeit"

[tool.uv.sources]
framestoryx = { git = "https://github.com/fossiaorg/framestoryx" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
